--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "slidev build",
     "dev": "slidev --open",
-    "export": "slidev export"
+    "export": "slidev export",
+    "theme:eject": "slidev theme eject"
   },
   "dependencies": {
     "@slidev/cli": "^52.6.0",
